# synapse_protobuf

./: CMakeLists.txt  README.md  package.xml
proto/: CMakeLists.txt  actuators.options  actuators.proto  altimeter.proto  battery_state.options  battery_state.proto  bezier_curve.options  bezier_curve.proto  bezier_trajectory.options  bezier_trajectory.proto  bool_stamped.proto  can.options  can.proto  clock.proto  fsm.proto  gen_doc.sh  header.options  header.proto  imu.options  imu.proto  joy.options  joy.proto  led.options  led.proto  led_array.options  led_array.proto  magnetic_field.options  magnetic_field.proto  mode.proto  my_msg.options  my_msg.proto  nav_sat_fix.options  nav_sat_fix.proto  nav_sat_status.proto  odometry.options  odometry.proto  point.proto  pose.proto  pose_with_covariance.options  pose_with_covariance.proto  (+13 more)
zephyr/: CMakeLists.txt  Kconfig  module.yml
